--- a/TSCodeBuilder.csproj
+++ b/TSCodeBuilder.csproj
@@ -34,4 +34,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodeBuilder\CodeBuilder.csproj" />
+  </ItemGroup>
+
 </Project>
